# vision-dot

./: Dockerfile  README.md   docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/api/: auth_routes.py  http_routes.py  websocket_routes.py
app/models/: request_model.py  response_model.py  user_model.py
app/services/: base_service.py  homographic_service.py
app/templates/: example_frontend.html
app/utils/: cache_helpers.py
